--- a/QueueSystemServer-GUI.csproj
+++ b/QueueSystemServer-GUI.csproj
@@ -108,5 +108,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\customer-support.png" />
+    <Resource Include="Icons\home.png" />
+    <Resource Include="Icons\power.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\line.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\line32px-white.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
